Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1250

Cache inspector does not seem to work properly

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • 3.1.4
    • HTTP
    • None

    Description

      It seems the cache inspector is not functioning properly. Regex lookups mostly works, but individual URLs does not. When it displays the error results page from a lookup, it also tends to truncate the URL by one character.

      Attachments

        Activity

          People

            jamespeach James Peach
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: