TS-1250: Cache inspector does not seem to work properly